# Wegweiser

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tutorial.html  tutorial.md  vite.config.ts
.github/workflows/: release.yml
egui-reference/: Cargo.toml
egui-reference/src/: annotate.rs  main.rs  model.rs
egui-reference/src/ui/: idle.rs  recording.rs
src/: app.rs  capture.rs  hooks.rs  model.rs  session.rs  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: annotate.rs  capture.rs  commands.rs  hooks.rs  lib.rs  main.rs  model.rs  platform.rs  session.rs  state.rs
src-tauri/src/commands/: export.rs  image.rs  mod.rs  recording.rs  session.rs  undo.rs  window.rs
src-tauri/src/export/: html.rs  markdown.rs  mod.rs
src-tauri/src/platform/: badge.rs  display_affinity.rs  mod.rs  window_enumeration.rs  window_geometry.rs
src/export/: html.rs  markdown.rs  mod.rs
src/lib/: canvas-drawing.ts  fabric-canvas.svelte.ts  resize.svelte.ts  types.ts  utils.ts
src/lib/components/: AnnotationEditor.svelte  AnnotationProperties.svelte  AnnotationToolbar.svelte  BackNavigationDialog.svelte  DeleteSessionDialog.svelte  DeleteStepsDialog.svelte  DragInsertBar.svelte  ExportStatusBar.svelte  Idle.svelte  ImageEditor.svelte  ImageEditorToolbar.svelte  MonitorTabGroup.svelte  PageLayout.svelte  Recording.svelte  Review.svelte  ReviewToolbar.svelte  SelectableList.svelte  StepCard.svelte  StepDescriptionPanel.svelte  StepImageViewer.svelte  (+1 more)
src/routes/: +layout.svelte  +page.svelte  layout.css
src/ui/: idle.rs  mod.rs  recording.rs  review.rs
(+73 files in other folders)
