[package]
name = "wegweiser"
version = "0.1.0"
description = "Windows step recorder"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wegweiser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
image = "0.25"
imageproc = "0.25"
rdev = "0.5.3"
uuid = { version = "1", features = ["v4"] }
xcap = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
